// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fluidRange should return a valid object when passed a single cssValues object and min/max screen sizes 1`] = `
Object {
  "@media (min-width: 1000px)": Object {
    "padding": "100px",
  },
  "@media (min-width: 400px)": Object {
    "padding": "calc(-33.33px + 13.33vw)",
  },
  "padding": "20px",
}
`;

exports[`fluidRange should return a valid object when passed multiple cssValues in an array and min/max screen sizes 1`] = `
Object {
  "@media (min-width: 1000px)": Object {
    "margin": "25px",
    "padding": "100px",
  },
  "@media (min-width: 400px)": Object {
    "margin": "calc(-8.33px + 3.33vw)",
    "padding": "calc(-33.33px + 13.33vw)",
  },
  "margin": "5px",
  "padding": "20px",
}
`;

exports[`fluidRange should use defaults when min/maxScreen are not passed 1`] = `
Object {
  "@media (min-width: 1200px)": Object {
    "padding": "100px",
  },
  "@media (min-width: 320px)": Object {
    "padding": "calc(-9.09px + 9.09vw)",
  },
  "padding": "20px",
}
`;
